# pod-toleration-policy

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  settings.rs  taint.rs  toleration.rs
test_data/: req_pod_with_exists_toleration.json  req_pod_with_toleration.json  req_pod_without_toleration.json
