[package]
name = "real-policy-rust"
version = "0.1.0"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi-codegen", tag = "v0.9.0", features = ["api", "v1_18"] }
yasec = "1.0.0"
yasec_derive = "1.0.0"