[package]
name = "pod-toleration-policy"
version = "0.2.0"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi-codegen", tag = "v0.9.0", features = ["api", "v1_18"] }
wapc-guest = "0.4.0"
